[package]
name = "raytracing_one_weekend"
version = "0.1.0"
authors = ["Zoe McCarthy <zoemccarthy12@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "raytracing"
path = "src/lib.rs"

[[bin]]
name = "raytrace"
test = false

[[bin]]
name = "vulkan_demo"
test = false

[[bin]]
name = "vulkan_graphics_demo"
test = false


[dependencies]
image = "0.23.6"
rand = "0.7.3"
rayon = "1.3.1"
vulkano = "0.19.0"
vulkano-shaders = "0.19.0"
vulkano-win = "0.19"
winit = "0.22"
humantime = "2.0.1"

